# PDF-Reader

./: CMakeLists.txt  pdf_reader.py  requirements.txt
docs/: README.md
src/: main.cpp
